test/parse/module/bad-import-table-redefinition.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (import "foo" "bar" (table $baz 0 funcref))
  (import "foo" "blah" (table $baz 0 funcref)))
(;; STDERR ;;;
out/test/parse/module/bad-import-table-redefinition.txt:5:4: error: redefinition of table "$baz"
  (import "foo" "blah" (table $baz 0 funcref)))
   ^^^^^^
;;; STDERR ;;)
